--- a/style.css
+++ b/style.css
@@ -29,5 +29,11 @@ section{
 .top-banner{
   background-image: url(images/top-banner.png);
   background-repeat: no-repeat;
-  
+}
+.dream-big{
+  display: flex;
+  margin:  100px;
+  background-image: url(images/dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
 }
