--- a/style.css
+++ b/style.css
@@ -37,3 +37,28 @@ h1{
   background-repeat: no-repeat;
   background-position: right;
 }
+.experience-item{
+  width: 40%;
+  margin-left: 5%;
+  margin-right: 5px;
+  padding-left: 20px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 40px grey ;
+}
+.experiance-area{
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+#web-dev-experience{
+  border-left: 7px solid;
+  border-image: linear-gradient(blue,cyan);
+  border-image-slice: 1;
+}
+#full-stack-experience{ border-left: 7px solid;
+  border-image: linear-gradient(orange,tomato);
+  border-image-slice: 1;
+}
+footer p{
+  text-align: center;
+}
